crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/arithmetic_overflow/generated/solc/0.8.31-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 3667] Error: Arithmetic error when computing constant value.
   ╭─[constants.sol:7:25]
   │
 7 │ uint256 constant SLOT = ~B;
   │                         ─┬  
   │                          ╰── Error occurred here.
───╯
